logs/debug_logs26.log
[2019-03-20T09:33:22.188] [INFO] MAIN - I have successfully logged into: NiniteBot,Degenates Den
[2019-03-20T09:33:25.616] [INFO] MAIN - [ninitebot-testing]:Thomas the Tank Engine#0001 - !info
[2019-03-20T09:33:25.620] [INFO] Info-CMD - Thomas the Tank Engine#0001 has ran the !info command on guild NiniteBot
[2019-03-20T09:33:25.620] [DEBUG] Info-CMD - 3
[2019-03-20T09:33:25.621] [DEBUG] Info-CMD - https://www.youtube.com/watch?v=SQoA_wjmE9w
[2019-03-20T09:33:25.812] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - 
[2019-03-20T09:39:19.861] [WARN] MAIN - TypeError: Cannot read property 'bind' of undefined
    at Function.app.reopen (C:\Users\theni\Desktop\NinitebotDiscord-master\node_modules\log4js\lib\appenders\file.js:59:48)
    at process.app.sighupHandler (C:\Users\theni\Desktop\NinitebotDiscord-master\node_modules\log4js\lib\appenders\file.js:64:9)
    at process.emit (events.js:189:13)
[2019-03-20T09:39:19.862] [WARN] MAIN - Node NOT Exiting...
[2019-03-31T16:15:41.735] [INFO] MAIN - I have successfully logged into: NiniteBot
[2019-03-31T16:15:50.212] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:15:50.216] [INFO] Help_CMD - The help command has been ran${PREFIX}
[2019-03-31T16:15:50.216] [INFO] Help_CMD - Member: undefined has the kick_members permission true
[2019-03-31T16:15:50.694] [INFO] MAIN - [undefined]:NiniteBot#3389 - 
[2019-03-31T16:16:25.468] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !reload help
[2019-03-31T16:16:25.469] [INFO] Reload-CMD - NiniteGamer#6666 has used the !reload command with the args of help
[2019-03-31T16:16:25.717] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - Succesfully reloaded command: help
[2019-03-31T16:16:30.128] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:16:30.129] [INFO] Help_CMD - The help command has been ran${PREFIX}
[2019-03-31T16:16:30.129] [INFO] Help_CMD - Member: undefined has the kick_members permission true
[2019-03-31T16:16:30.352] [INFO] MAIN - [undefined]:NiniteBot#3389 - 
[2019-03-31T16:16:55.249] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !reload help
[2019-03-31T16:16:55.249] [INFO] Reload-CMD - NiniteGamer#6666 has used the !reload command with the args of help
[2019-03-31T16:16:55.467] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - Succesfully reloaded command: help
[2019-03-31T16:16:57.672] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:16:57.674] [INFO] Help_CMD - The help command has been ran${PREFIX}
[2019-03-31T16:16:57.675] [INFO] Help_CMD - Member: undefined has the kick_members permission true
[2019-03-31T16:19:19.569] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !reload help
[2019-03-31T16:19:19.570] [INFO] Reload-CMD - NiniteGamer#6666 has used the !reload command with the args of help
[2019-03-31T16:19:19.775] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - Succesfully reloaded command: help
[2019-03-31T16:19:22.561] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:19:22.563] [INFO] Help_CMD - The help command has been ran${PREFIX}
[2019-03-31T16:19:22.564] [INFO] Help_CMD - Member: undefined has the kick_members permission true
[2019-03-31T16:20:06.681] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !reload help
[2019-03-31T16:20:06.681] [INFO] Reload-CMD - NiniteGamer#6666 has used the !reload command with the args of help
[2019-03-31T16:20:06.864] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - Succesfully reloaded command: help
[2019-03-31T16:20:08.177] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:20:08.179] [INFO] Help_CMD - The help command has been ran${PREFIX}
[2019-03-31T16:20:08.180] [INFO] Help_CMD - Member: undefined has the kick_members permission true
[2019-03-31T16:24:01.268] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !reload help
[2019-03-31T16:24:01.268] [INFO] Reload-CMD - NiniteGamer#6666 has used the !reload command with the args of help
[2019-03-31T16:24:01.509] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - Succesfully reloaded command: help
[2019-03-31T16:24:02.460] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:24:02.464] [ERROR] MAIN - C:\Users\theni\Desktop\NinitebotDiscord-master\NinitebotDiscord-master\commands\help.js:25
        const helpinfoadmin = new Discord.RichEmbed()
              ^^^^^^^^^^^^^

SyntaxError: Unexpected identifier
    at new Script (vm.js:80:7)
    at createScript (vm.js:274:10)
    at Object.runInThisContext (vm.js:326:10)
    at Module._compile (internal/modules/cjs/loader.js:664:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:712:10)
    at Module.load (internal/modules/cjs/loader.js:600:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:539:12)
    at Function.Module._load (internal/modules/cjs/loader.js:531:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
[2019-03-31T16:25:15.002] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !reload help
[2019-03-31T16:25:15.002] [INFO] Reload-CMD - NiniteGamer#6666 has used the !reload command with the args of help
[2019-03-31T16:25:15.189] [INFO] MAIN - [ninitebot-testing]:NiniteBot#3389 - Succesfully reloaded command: help
[2019-03-31T16:25:16.484] [INFO] MAIN - [ninitebot-testing]:NiniteGamer#6666 - !help
[2019-03-31T16:25:16.487] [ERROR] MAIN - C:\Users\theni\Desktop\NinitebotDiscord-master\NinitebotDiscord-master\commands\help.js:27
        const helpinfoadmin = new Discord.RichEmbed()
              ^^^^^^^^^^^^^

SyntaxError: Unexpected identifier
    at new Script (vm.js:80:7)
    at createScript (vm.js:274:10)
    at Object.runInThisContext (vm.js:326:10)
    at Module._compile (internal/modules/cjs/loader.js:664:28)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:712:10)
    at Module.load (internal/modules/cjs/loader.js:600:32)
    at tryModuleLoad (internal/modules/cjs/loader.js:539:12)
    at Function.Module._load (internal/modules/cjs/loader.js:531:3)
    at Module.require (internal/modules/cjs/loader.js:637:17)
    at require (internal/modules/cjs/helpers.js:22:18)
